--- a/EventSpace/index.html
+++ b/EventSpace/index.html
@@ -93,7 +93,7 @@
       <li style="background-image: url(img/slider_2.jpg);" class="overlay"></li>
     </ul>
   </section>
-  <!-- END: slider  -->
+  <!-- END: slider
 
   <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
@@ -137,8 +137,9 @@
       </div>
     </div>
   </section>
-  <!-- END: section -->
+  END: section -->
 
+<!--
   <section class="probootstrap-section">
     <div class="container">
       <div class="row heading">
@@ -197,7 +198,8 @@
       </div>
     </div>
   </section>
-  <!-- END: section -->
+  s-->
+  <!-- END: section 
 
   <section class="probootstrap-section probootstrap-bg" style="background-image: url(img/slider_2.jpg);">
     <div class="container text-center probootstrap-animate" data-animate-effect="fadeIn">
@@ -206,7 +208,7 @@
       <p><a href="#" class="btn btn-primary mb10">Find out more</a></p>
     </div>
   </section>
-  <!-- END: section -->
+   END: section -->
 
   <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
@@ -442,6 +444,7 @@
     </div>
   </section>
 
+ <!--
   <section class="probootstrap-half reverse">
     <div class="image-wrap">
       <div class="image" style="background-image: url(img/slider_5.jpg);"></div>
@@ -510,7 +513,7 @@
       </div>
     </div>
   </section>
-
+  -->
   <!-- END: section -->
 
   <section class="probootstrap-section probootstrap-section-lighter">
