--- a/EventSpace/index.html
+++ b/EventSpace/index.html
@@ -213,7 +213,7 @@
   <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
       <div class="row heading">
-        <h2 class="mt0 mb50 text-center">Featured Listing</h2>
+        <h2 class="mt0 mb50 text-center">Featured Listings</h2>
       </div>
       <div class="row">
         <div class="col-md-4 col-sm-6">
@@ -565,26 +565,26 @@
   <footer class="probootstrap-footer probootstrap-bg" style="background-image: url(img/slider_3.jpg)">
     <div class="container">
       <div class="row mb60">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget">
-            <h4 class="heading">About Haus.</h4>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+            <h4 class="heading">About EventSpace.</h4>
+            <p>EventSpace was created as a final semester Capstone project for Chris, Leo & Matt as a way to showcase their skills... </p>
             <p><a href="#">Read more...</a></p>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Quick Links</h4>
             <ul class="stack-link">
-              <li><a href="#">Property Listing</a></li>
-              <li><a href="#">Rent Properties</a></li>
-              <li><a href="#">Sell Properties</a></li>
-              <li><a href="#">Agents</a></li>
-              <li><a href="#">Testimonial</a></li>
+              <li><a href="#">Real Estate Listings</a></li>
+              <li><a href="#">Venue Listings</a></li>
+              <li><a href="#">Featured</a></li>
+              <li><a href="#">Create A Listing</a></li>
+              <li><a href="#">Sign Up</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-4">
           <div class="probootstrap-footer-widget">
             <h4 class="heading">Popular Cities</h4>
             <ul class="stack-link">
@@ -595,11 +595,11 @@
               <li><a href="#">Los Angeles <small>(342 properties)</small></a></li>
             </ul>
           </div>
-        </div>
-        <div class="col-md-3">
+        </div> -->
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Subscribe</h4>
-            <p>Far far away behind the word mountains far from.</p>
+            <p>For updates on new features & amazing deals</p>
             <form action="#">
               <div class="form-field">
                 <input type="text" class="form-control" placeholder="Enter your email">
@@ -612,7 +612,7 @@
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
-            <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Haus</a>. Designed by <a href="https://uicookies.com/">uicookies.com</a> <br> Demo Photos from <a href="https://pixabay.com/">Pixabay</a> &amp; <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>&copy; 2019 <a href="#">EventSpace</a></p>
           </div>
         </div>
         <div class="col-md-6">
