--- a/EventSpace/profile.html
+++ b/EventSpace/profile.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Haus &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
+    <title>Event Space - Profile</title>
     <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <meta name="keywords" content="event, space, eventspace, apartments, venues, properties, for sale, for rent, renting">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
 
     <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Event Space<span>.</span></a>
+        <a href="index.html" class="probootstrap-logo">Event Space<span></span></a>
 
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
@@ -34,14 +34,14 @@
           <ul class="probootstrap-main-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="properties.html">Properties</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="profile.html">Profile</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
-            <h5>Address</h5>
-            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+            <!-- <h5>Address</h5>
+            <p>198 West 21th Street, Suite 721 New York NY 10016</p> -->
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -112,21 +112,21 @@
           </form>
         </div>
         <div class="col-md-3 col-md-push-1">
-          <h4>Contact Details</h4>
+          <h4>For Support Contact</h4>
           <ul class="with-icon colored">
-            <li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-            <li><i class="icon-mail"></i><span>info@domain.com</span></li>
-            <li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
+            <!-- <li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li> -->
+            <li><i class="icon-mail"></i><span>support@eventspace.com</span></li>
+            <!-- <li><i class="icon-phone2"></i><span>+123 456 7890</span></li> -->
           </ul>
 
           <h4>Feedback</h4>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+          <p>Feel free to contact our support for any issues you need assistance with, We are always happy to help.</p>
           <p><a href="#">Learn More</a></p>
         </div>
       </div>
     </div>
   </section>
-  <div id="map"></div>
+  <!--<div id="map"></div> -->
 
 
 
@@ -134,26 +134,26 @@
   <footer class="probootstrap-footer probootstrap-bg" style="background-image: url(img/slider_3.jpg)">
     <div class="container">
       <div class="row mb60">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget">
-            <h4 class="heading">About Haus.</h4>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+            <h4 class="heading">About EventSpace.</h4>
+            <p>EventSpace was created as a final semester Capstone project for Chris, Leo & Matt as a way to showcase their skills... </p>
             <p><a href="#">Read more...</a></p>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Quick Links</h4>
             <ul class="stack-link">
-              <li><a href="#">Property Listing</a></li>
-              <li><a href="#">Rent Properties</a></li>
-              <li><a href="#">Sell Properties</a></li>
-              <li><a href="#">Agents</a></li>
-              <li><a href="#">Testimonial</a></li>
+              <li><a href="#">Real Estate Listings</a></li>
+              <li><a href="#">Venue Listings</a></li>
+              <li><a href="#">Featured</a></li>
+              <li><a href="#">Create A Listing</a></li>
+              <li><a href="#">Sign Up</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <div class="probootstrap-footer-widget">
             <h4 class="heading">Popular Cities</h4>
             <ul class="stack-link">
@@ -164,11 +164,11 @@
               <li><a href="#">Los Angeles <small>(342 properties)</small></a></li>
             </ul>
           </div>
-        </div>
-        <div class="col-md-3">
+        </div> -->
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Subscribe</h4>
-            <p>Far far away behind the word mountains far from.</p>
+            <p>For updates on new features & amazing deals</p>
             <form action="#">
               <div class="form-field">
                 <input type="text" class="form-control" placeholder="Enter your email">
@@ -181,7 +181,7 @@
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
-            <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Haus</a>. Designed by <a href="https://uicookies.com/">uicookies.com</a> <br> Demo Photos from <a href="https://pixabay.com/">Pixabay</a> &amp; <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>&copy; 2019 <a href="#">EventSpace</a></p>
           </div>
         </div>
         <div class="col-md-6">
