--- a/EventSpace/index.html
+++ b/EventSpace/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event Space - Home</title>
     <meta name="description" content="Find your space">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <meta name="keywords" content="event, space, eventspace, apartments, venues, properties, for sale, for rent, renting">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
 
     <!--[if lt IE 9]>
