--- a/EventSpace/profile.html
+++ b/EventSpace/profile.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Event Space - Profile</title>
-    <meta name="description" content="Free Bootstrap Theme by uicookies.com">
+    <meta name="description" content="Find your space.">
     <meta name="keywords" content="event, space, eventspace, apartments, venues, properties, for sale, for rent, renting">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
