--- a/EventSpace/profile.html
+++ b/EventSpace/profile.html
@@ -62,7 +62,7 @@
 
             <div class="page-title probootstrap-animate">
               <div class="probootstrap-breadcrumbs">
-                <a href="#">Home</a><span>About</span>
+                <a href="#">Home</a><span>Profile</span>
               </div>
               <h1>Profile</h1>
             </div>
