--- a/EventSpace/properties.html
+++ b/EventSpace/properties.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Find your space.">
     <meta name="keywords" content="event, space, eventspace, apartments, venues, properties, for sale, for rent, renting">
 
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
