--- a/EventSpace/about.html
+++ b/EventSpace/about.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Haus &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
-    <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <title>Event Space - About</title>
+    <meta name="description" content="Find your space.">
+    <meta name="keywords" content="event, space, eventspace, apartments, venues, properties, for sale, for rent, renting">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
 
     <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Event Space<span>.</span></a>
+        <a href="index.html" class="probootstrap-logo">Event Space<span></span></a>
 
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
@@ -34,14 +34,14 @@
           <ul class="probootstrap-main-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="properties.html">Properties</a></li>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="events.html">Venues</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
-            <h5>Address</h5>
-            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+            <!-- <h5>Address</h5>
+            <p>198 West 21th Street, Suite 721 New York NY 10016</p> -->
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -81,14 +81,14 @@
 
   <section class="probootstrap-section">
     <div class="container">
-      <div class="row heading">
+      <!--<div class="row heading">
         <div class="col-md-12"><h2 class="mt0 mb50 text-center">Our Company</h2></div>
-      </div>
-      <div class="row">
+      </div> -->
+      <!-- <div class="row">
         <div class="col-md-12">
           <p><img src="img/slider_5.jpg" class="img-responsive" alt="Free Bootstrap Template by uicookies.com"></p>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-md-6">
           <h2>Our Mission</h2>
@@ -102,7 +102,7 @@
     </div>
   </section>
 
-  <section class="probootstrap-half">
+  <!-- <section class="probootstrap-half">
     <div class="image-wrap">
       <div class="image" style="background-image: url(img/slider_2.jpg);"></div>
     </div>
@@ -137,9 +137,9 @@
       <p class="mb50">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
       <p><a href="#" class="btn btn-primary mb10">Find out more</a></p>
     </div>
-  </section>
+  </section> -->
 
-  <section class="probootstrap-section probootstrap-section-lighter">
+  <!-- <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
       <div class="row heading">
         <h2 class="mt0 mb50 text-center">Our Agents</h2>
@@ -242,8 +242,69 @@
             </div>
           </div>
         </div>
-
-
+      </div>
+    </div>
+  </section> -->
+  
+  <section class="probootstrap-section probootstrap-section-lighter">
+    <div class="container">
+      <div class="row heading">
+        <h2 class="mt0 mb50 text-center"></h2>
+      </div>
+      <div class="row">
+          <div class="col-md-3">
+          <div class="probootstrap-card probootstrap-person text-left">
+            <div class="probootstrap-card-media">
+              <img src="img/person_3.jpg" class="img-responsive" alt="Image Unavailable">
+            </div>
+            <div class="probootstrap-card-text">
+              <h2 class="probootstrap-card-heading mb0">Chris Hunt</h2>
+              <p><small>Co-Founder</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9">
+        	<div class="probootstrap-card probootstrap-person text-left">
+        	<p style="padding-top: 50px; padding-bottom: 50px; padding-left: 30px; padding-right:30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        	</div>
+        </div>
+      </div>
+      <div class="row">
+      	<div class="col-md-3">
+          <div class="probootstrap-card probootstrap-person text-left">
+            <div class="probootstrap-card-media">
+              <img src="img/person_3.jpg" class="img-responsive" alt="Image Unavailable">
+            </div>
+            <div class="probootstrap-card-text">
+              <h2 class="probootstrap-card-heading mb0">Leo Curtis</h2>
+              <p><small>Co-Founder</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9">
+        	<div class="probootstrap-card probootstrap-person text-left">
+        	<p style="padding-top: 50px; padding-bottom: 50px; padding-left: 30px; padding-right:30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        	</div>
+        </div>
+       </div>
+       <div class="row">
+          <div class="col-md-3">
+          <div class="probootstrap-card probootstrap-person text-left">
+            <div class="probootstrap-card-media">
+              <img src="img/person_3.jpg" class="img-responsive" alt="Image Unavailable">
+            </div>
+            <div class="probootstrap-card-text">
+              <h2 class="probootstrap-card-heading mb0">Matthew Perrot</h2>
+              <p><small>Co-Founder</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9">
+        	<div class="probootstrap-card probootstrap-person text-left">
+        	<p style="padding-top: 50px; padding-bottom: 50px; padding-left: 30px; padding-right:30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        	</div>
+        </div>
+          </div>
       </div>
     </div>
   </section>
@@ -253,26 +314,26 @@
   <footer class="probootstrap-footer probootstrap-bg" style="background-image: url(img/slider_3.jpg)">
     <div class="container">
       <div class="row mb60">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget">
-            <h4 class="heading">About Haus.</h4>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+            <h4 class="heading">About EventSpace.</h4>
+            <p>EventSpace was created as a final semester Capstone project for Chris, Leo & Matt as a way to showcase their skills... </p>
             <p><a href="#">Read more...</a></p>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Quick Links</h4>
             <ul class="stack-link">
-              <li><a href="#">Property Listing</a></li>
-              <li><a href="#">Rent Properties</a></li>
-              <li><a href="#">Sell Properties</a></li>
-              <li><a href="#">Agents</a></li>
-              <li><a href="#">Testimonial</a></li>
+              <li><a href="#">Real Estate Listings</a></li>
+              <li><a href="#">Venue Listings</a></li>
+              <li><a href="#">Featured</a></li>
+              <li><a href="#">Create A Listing</a></li>
+              <li><a href="#">Sign Up</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-4">
           <div class="probootstrap-footer-widget">
             <h4 class="heading">Popular Cities</h4>
             <ul class="stack-link">
@@ -283,11 +344,11 @@
               <li><a href="#">Los Angeles <small>(342 properties)</small></a></li>
             </ul>
           </div>
-        </div>
-        <div class="col-md-3">
+        </div> -->
+        <div class="col-md-4">
           <div class="probootstrap-footer-widget probootstrap-link-wrap">
             <h4 class="heading">Subscribe</h4>
-            <p>Far far away behind the word mountains far from.</p>
+            <p>For updates on new features & amazing deals</p>
             <form action="#">
               <div class="form-field">
                 <input type="text" class="form-control" placeholder="Enter your email">
@@ -300,7 +361,7 @@
       <div class="row copyright">
         <div class="col-md-6">
           <div class="probootstrap-footer-widget">
-            <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Haus</a>. Designed by <a href="https://uicookies.com/">uicookies.com</a> <br> Demo Photos from <a href="https://pixabay.com/">Pixabay</a> &amp; <a href="https://unsplash.com/">Unsplash</a></p>
+            <p>&copy; 2019 <a href="#">EventSpace</a></p>
           </div>
         </div>
         <div class="col-md-6">
