--- a/EventSpace/add.html
+++ b/EventSpace/add.html
@@ -234,7 +234,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
-  <script src="js/add.js"></script>
+  <script src="js/app.js"></script>
 
   <script src="js/scripts.min.js"></script>
   <script src="js/main.min.js"></script>
