--- a/EventSpace/add.html
+++ b/EventSpace/add.html
@@ -105,11 +105,11 @@
             </div>
             <div class="form-group">
               <label for="location">Location</label>
-              <input type="text" class="form-control" id="location" name="location"></input>
+              <input type="text" class="form-control" id="location" name="location">
             </div>
             <div class="form-group">
               <label for="fire">Fire Capacity</label>
-              <input type="text" class="form-control" id="fire" name="fire"></input>
+              <input type="text" class="form-control" id="fire" name="fire">
             </div>
             <div class="form-group">
               <label for="pic">Add Pictures</label>
