--- a/EventSpace/index.html
+++ b/EventSpace/index.html
@@ -37,6 +37,7 @@
             <li><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="add.html">Add Listing</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -199,7 +200,7 @@
     </div>
   </section>
   s-->
-  <!-- END: section 
+  <!-- END: section
 
   <section class="probootstrap-section probootstrap-bg" style="background-image: url(img/slider_2.jpg);">
     <div class="container text-center probootstrap-animate" data-animate-effect="fadeIn">
