--- a/EventSpace/about.html
+++ b/EventSpace/about.html
@@ -37,6 +37,7 @@
             <li><a href="events.html">Venues</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="add.html">Add Listing</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -245,7 +246,7 @@
       </div>
     </div>
   </section> -->
-  
+
   <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
       <div class="row heading">
