--- a/EventSpace/events.html
+++ b/EventSpace/events.html
@@ -37,6 +37,7 @@
             <li class="active"><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="add.html">Add Listing</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -77,7 +78,7 @@
       <li style="background-image: url(img/slider_2.jpg);"></li>
     </ul>
   </section>
-  
+
   <section class="probootstrap-section probootstrap-section-lighter">
     <div class="container">
       <div class="row">
