--- a/EventSpace/properties.html
+++ b/EventSpace/properties.html
@@ -37,6 +37,7 @@
             <li><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="add.html">Add Listing</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
