--- a/EventSpace/about.html
+++ b/EventSpace/about.html
@@ -37,7 +37,8 @@
             <li><a href="events.html">Venues</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="add.html">Add Listing</a></li>
+            <li><a href="add.html">Add Apartment</a></li>
+            <li><a href="addVenue.html">Add Venue</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
