--- a/EventSpace/detail.html
+++ b/EventSpace/detail.html
@@ -311,9 +311,9 @@
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/6.3.1/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>-->
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -336,6 +336,7 @@
   <script src="js/scripts.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/custom.js"></script>
+    <script src="js/detail.js"></script>
 
   </body>
 </html>
