--- a/EventSpace/detail.html
+++ b/EventSpace/detail.html
@@ -36,7 +36,8 @@
             <li class="active"><a href="properties.html">Properties</a></li>
             <li><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="add.html">Add Listing</a></li>
+            <li><a href="add.html">Add Apartment</a></li>
+            <li><a href="addVenue.html">Add Venue</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -60,11 +61,8 @@
         </div>
       </div>
     </div>
-    <ul class="slides">
-      <li style="background-image: url(img/slider_1.jpg);" class="overlay"></li>
-      <li style="background-image: url(img/slider_4.jpg);" class="overlay"></li>
-      <li style="background-image: url(img/slider_2.jpg);" class="overlay"></li>
-    </ul>
+    <div id="image">
+  </div>
   </section>
   <!-- END: slider
 
