--- a/EventSpace/add.html
+++ b/EventSpace/add.html
@@ -36,7 +36,6 @@
             <li><a href="properties.html">Properties</a></li>
             <li><a href="events.html">Venues</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="profile.html">Profile</a></li>
             <li class="active"><a href="add.html">Add Apartment</a></li>
             <li><a href="addVenue.html">Add Venue</a></li>
           </ul>
@@ -102,19 +101,28 @@
             </div>
             <div class="form-group">
               <label for="price">Price</label>
-              <input type="text" class="form-control" id="price" name="price">
+              <input type="number" class="form-control" id="price" min="0" name="price">
             </div>
             <div class="form-group">
               <label for="location">Location</label>
               <input type="text" class="form-control" id="location" name="location">
             </div>
             <div class="form-group">
-              <label for="fire">Fire Capacity</label>
-              <input type="text" class="form-control" id="fire" name="fire">
+              <label for="fire"># of Beds</label>
+              <input type="number" class="form-control" id="bed" min="0" name="bed">
+            </div>
+            <div class="form-group">
+              <label for="location"># of Bathrooms</label>
+              <input type="number" class="form-control" id="bath" min="0" name="bath">
+            </div>
+            <div class="form-group">
+              <label for="location">Area in Square Feet</label>
+              <input type="number" class="form-control" id="area" min="0" name="area">
             </div>
             <div class="form-group">
               <label for="pic">Add Pictures</label>
-              <input type="file" multiple id="pic" name="pic"></input>
+              <progress value="0" max="100" id="uploader">0%</progress>
+              <input type="file" value="upload" id="fileButton">
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary" id="submitBtn" onClick="submitClick()">Submit</button>
@@ -148,7 +156,7 @@
           <div class="probootstrap-footer-widget">
             <h4 class="heading">About EventSpace.</h4>
             <p>EventSpace was created as a final semester Capstone project for Chris, Leo & Matt as a way to showcase their skills... </p>
-            <p><a href="#">Read more...</a></p>
+            <p><a href="about.html">Read more...</a></p>
           </div>
         </div>
         <div class="col-md-4">
