--- a/EventSpace/events.html
+++ b/EventSpace/events.html
@@ -190,10 +190,12 @@
   firebase.initializeApp(firebaseConfig);
 </script>
 <script src="js/events.js"></script>
+<script src="js/venueDetail.js"></script>
 
   <script src="js/scripts.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/custom.js"></script>
+
 
   </body>
 </html>
